update hw week 6

--- a/Homework/week-6/design.html
+++ b/Homework/week-6/design.html
@@ -24,33 +24,19 @@
       <a class="navbar-brand" href="map.html">Urscha's visualisations</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="map.html">Home</a></li>
+      <li><a href="map.html">Home</a></li>
       <li><a href="storytelling.html">Storytelling</a></li>
-      <li><a href="design.html">Design choices</a></li>
+      <li class="active"><a href="design.html">Design choices</a></li>
     </ul>
   </div>
 </nav>
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-	<h1>How does happiness relate to GDP per capita?</h1>
-	<p>Urscha Fajdiga, 11377437</p>
-	<h2>GDP per capita in 2014 in USD</h2>
-		<div id="container"></div>
-			<div id="scatterplotcontainer">
-				<svg id="scatterplot"></svg>
-			</div>
-		<div id="extra_text">
-			<p id="explanation">
-			How does happiness relate to GDP per capita? Click on a country on the world map, to see where it is located on the scatterplot.
-			You can also hover over the dots on the scatterplot to see which country it is, as well ass the happiness level and GDP per capita.
-			</p>
-			<p class="datasource">Link to data sources: 
-				<ul>
-					<li><a href="http://data.un.org/Data.aspx?q=GDP+per+capita&d=SNAAMA&f=grID%3a101%3bcurrID%3aUSD%3bpcFlag%3a1">Map data</a></li>
-					<li><a href="https://ourworldindata.org/happiness-and-life-satisfaction/">Scatterplot data</a></li>
-				</ul>
-			</p>
+	<h1>Design choices</h1>
+	<h2>What makes a good design?</h2>
+		<div>
+			<p>Does money make people more happy? </p>
 		</div>
 </div>
 
