--- a/Homework/week-6/storytelling.html
+++ b/Homework/week-6/storytelling.html
@@ -1,8 +1,10 @@
+<!-- Urscha Fajdiga 11377437 -->
+<!-- This page explains the storytelling aspect of the homework asignment -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-	<title>Urscha's interactive visualisations</title>
+	<title>Storytelling</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -14,6 +16,8 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 	<script src="datamaps.world.min.js"></script>
 	<script src="https://d3js.org/d3-queue.v3.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/bootstrap-slider.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/css/bootstrap-slider.css" />
 	<script type="text/javascript" src="map.js"></script>
 </head>
 <body>
@@ -51,7 +55,7 @@
 			</p>
 			<p>If you look at the scatterplot, you can see there is a positive linear relationship between GDP per capita and happiness. Therefore,
 			I think I made the point, with these visualisations, that living in a more wealthy countrie, does increase your happiness.</p>
-			<img src="happiness.png">
+			<img src="happiness.png" alt="happiess">
 			<h2>Functionality</h2>
 			<p>I wanted it to be easy for a user to have a country in mind and see the GDP per capita for that country and where the 'happiness' of that country is located. 
 			Therefore I made an interactive map where you can hover over a country to see the exact GDP per capita and when you click on that country, it shows where
