--- a/Homework/week-6/map.html
+++ b/Homework/week-6/map.html
@@ -1,3 +1,5 @@
+<!-- Urscha Fajdiga 11377437 -->
+<!-- This page is the homepage and shows the interactive visualisations -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +15,8 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 	<script src="datamaps.world.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/bootstrap-slider.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/css/bootstrap-slider.css" />
 	<script src="https://d3js.org/d3-queue.v3.min.js"></script>
 	<script type="text/javascript" src="map.js"></script>
 </head>
@@ -40,17 +44,21 @@
 			<div id="scatterplotcontainer">
 				<svg id="scatterplot"></svg>
 			</div>
+			<input id="slider" type="text" class="span2" value="" data-slider-min="0" data-slider-max="100000" data-slider-step="10000" data-slider-value="[0,100000]"/>
 		<div id="extra_text">
 			<p id="explanation">
-			How does happiness relate to GDP per capita? Click on a country on the world map, to see where it is located on the scatterplot.
-			You can also hover over the dots on the scatterplot to see which country it is, as well ass the happiness level and GDP per capita.
-			</p>
-			<p class="datasource">Link to data sources: 
+			How does happiness relate to GDP per capita? Explore the data: <p>
+			<ul>
+				<li>Hover over a country to see the country name and GDP per capita</li>
+				<li>Click on a country on the world map, to see where it is located on the scatterplot.</li>
+				<li>You can also hover over the dots on the scatterplot to see the country name, the happiness level and GDP per capita.</li>
+				<li>Use the slider to adjust the x-axis</li>
+			</ul>
+			<p class="datasource">Link to data sources:</p>
 				<ul>
 					<li><a href="http://data.un.org/Data.aspx?q=GDP+per+capita&d=SNAAMA&f=grID%3a101%3bcurrID%3aUSD%3bpcFlag%3a1">Map data</a></li>
 					<li><a href="https://ourworldindata.org/happiness-and-life-satisfaction/">Scatterplot data</a></li>
 				</ul>
-			</p>
 		</div>
 </div>
 
