--- a/Homework/week-6/map.html
+++ b/Homework/week-6/map.html
@@ -23,38 +23,38 @@
 <body>
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="map.html">Urscha's visualisations</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="map.html">Home</a></li>
-      <li><a href="storytelling.html">Storytelling</a></li>
-      <li><a href="design.html">Design choices</a></li>
-    </ul>
-  </div>
+	<div class="container-fluid">
+		<div class="navbar-header">
+		  <a class="navbar-brand" href="map.html">Urscha's visualisations</a>
+		</div>
+	<ul class="nav navbar-nav">
+		<li class="active"><a href="map.html">Home</a></li>
+		<li><a href="storytelling.html">Storytelling</a></li>
+		<li><a href="design.html">Design choices</a></li>
+	</ul>
+	</div>
 </nav>
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
 	<h1>How does happiness relate to GDP per capita?</h1>
-	<p>Urscha Fajdiga, 11377437</p>
 	<h2>GDP per capita in 2014 in USD</h2>
 		<div id="container"></div>
+			<h2>Relation GDP per capita and happiness index of 2014</h2>
 			<div id="scatterplotcontainer">
 				<svg id="scatterplot"></svg>
 			</div>
 			<input id="slider" type="text" class="span2" value="" data-slider-min="0" data-slider-max="100000" data-slider-step="10000" data-slider-value="[0,100000]"/>
 		<div id="extra_text">
-			<p id="explanation">
+			<p class="left">
 			How does happiness relate to GDP per capita? Explore the data: <p>
 			<ul>
 				<li>Hover over a country to see the country name and GDP per capita</li>
-				<li>Click on a country on the world map, to see where it is located on the scatterplot.</li>
-				<li>You can also hover over the dots on the scatterplot to see the country name, the happiness level and GDP per capita.</li>
+				<li>Click on a country on the world map, to see where it is located on the scatterplot</li>
+				<li>You can also hover over the dots on the scatterplot to see the country name, the happiness level and GDP per capita</li>
 				<li>Use the slider to adjust the x-axis</li>
 			</ul>
-			<p class="datasource">Link to data sources:</p>
+			<p class="left">Link to data sources:</p>
 				<ul>
 					<li><a href="http://data.un.org/Data.aspx?q=GDP+per+capita&d=SNAAMA&f=grID%3a101%3bcurrID%3aUSD%3bpcFlag%3a1">Map data</a></li>
 					<li><a href="https://ourworldindata.org/happiness-and-life-satisfaction/">Scatterplot data</a></li>
@@ -64,7 +64,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
+	<p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
 </footer>
 
 </body>
